# FinalProjectCOMP6885

./: LICENSE  README.md  [NLP_Group_6]_Brautigan_Haiku_Editor.ipynb  brautigan.ipynb  brautigan_llm_trainer.ipynb  brautingan.ipynb
dataset-extraction/: SOURCES.txt  haiku_analyzer.py  merge_csv.py  pyproject.toml
dataset-extraction/datasets_csv/: haiku_dataset_bfbarry.csv  haiku_dataset_huanggab.csv  haiku_dataset_statworx.csv
dataset-extraction/datasets_extraction_scripts/: bfbarry.py  hjhalani30.py  huanggab.py  merged_with_keywords.csv  statworx.py
dataset-extraction/old_feature_extraction_scripts/: extract_features.py  haiku_quality_scorer.py
