[project]
name = "dataset-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "pandas>=2.3.3",
    "nltk>=3.8.1",
    "pyphen>=0.14",
    "sentence-transformers>=5.1.2",
    "openpyxl>=3.1.5",
    "tqdm>=4.67.1",
]
